# clockwork

./: Cargo.toml  Makefile  README.md  clockwork.toml
.github/workflows/: ci.yml  publish.yml  security.yml
src/: config.rs  db.rs  error.rs  http.rs  main.rs  task.rs
src/command/: echo.rs  email.rs  mod.rs
www/: Makefile  angular.json  package.json  proxy.conf.json
www/src/: index.html
www/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
www/src/app/components/page-not-found/: page-not-found.component.html
www/src/app/components/task-details/: task-details.component.css  task-details.component.html  task-details.component.spec.ts  task-details.component.ts
www/src/app/components/task-list/: task-list.component.css  task-list.component.html  task-list.component.ts
www/src/app/components/user-login/: user-login.component.ts
www/src/app/guards/: auth.guard.ts
www/src/app/interceptors/: auth.interceptor.ts
www/src/app/models/: credentials.spec.ts  credentials.ts  task.ts
www/src/app/services/: auth.service.ts  task.service.ts
www/src/environments/: environment.prod.ts  environment.ts
