[package]
authors = ["Adrien Pujol <ap@cdfr.net>"]
license = "MIT"
readme = "README.md"
name = "clockwork"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/crashdump/clockwork"

[[bin]]
name = "clockwork"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
strum = "0.25"
strum_macros = "0.25"
toml = "0.7"
rocket-basicauth = "2"

[profile.release]
lto = true
panic = "abort"